# cpp_starter_project

./: .cmake-format.yaml  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.sh  configure.sh  run-clang-format.sh  run-cmake-format.sh  run-iwyu.py  test.sh
benchmark/: CMakeLists.txt
benchmark/benchmarks/: CMakeLists.txt  example.cpp
cmake/: Conan.cmake  FetchContentDependencies.cmake  Options.cmake  RaspberryPi.cmake  Raylib.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
include/: Version.h.in
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/desktop/: CMakeLists.txt  main.cpp
src/app/engine/: CMakeLists.txt  Game.cpp  Game.h  README.md
src/app/fltk/: CMakeLists.txt
src/app/gtkmm/: CMakeLists.txt
src/app/imgui/: CMakeLists.txt
src/app/intro/: CMakeLists.txt
src/app/nana/: CMakeLists.txt
src/app/qt/: CMakeLists.txt
src/app/raspberrypi/: CMakeLists.txt  main.cpp
src/app/raspberrypi/gpio/: GpIO.cpp  GpIO.h
src/app/sdl/: CMakeLists.txt
src/core/: Bar.cpp  Bar.h  CMakeLists.txt  README.md
src/persistence/: CMakeLists.txt
src/persistence/bitsery/: CMakeLists.txt
src/persistence/json/: CMakeLists.txt  magic_enum.h  units.h
src/persistence/json/etl/: array.h  cstring.h  vector.h
test/: CMakeLists.txt
test/constexpr_tests/: CMakeLists.txt
test/integrartion_tests/: CMakeLists.txt  test_game.cpp  tests.cpp
test/tests/: CMakeLists.txt  test_bar.cpp
